@@ -538,6 +538,9 @@ t/data/autoqc/dbix_loader/run/lane/12233_1#72.sequence_error.json
 t/data/autoqc/dbix_loader/run/12166_2.spatial_filter.json
 t/data/autoqc/dbix_loader/run/11180_1.tags_reporters.json
 t/data/autoqc/upstream_tags/9669_1.upstream_tags.json
+t/data/autoqc/upstream_tags/lane1/12920_1#0.bam
+t/data/autoqc/upstream_tags/lane1/13362_1#0.bam
+t/data/autoqc/upstream_tags/lane1/6954_1#0.bam
 t/data/autoqc/090721_IL29_2549/Config/TileLayout.xml
 t/data/autoqc/090721_IL29_2549/data/2549_1_1#33.fastqcheck
 t/data/autoqc/090721_IL29_2549/data/2549_1_1.fastqcheck
