@@ -2,70 +2,49 @@ use strict;
 use warnings;
 use Cwd;
 use File::Temp qw/ tempdir /;
-use Test::More tests => 6;
+use Test::More tests => 7;
 use Test::Exception;
 
 my $ref_repos = cwd . '/t/data/autoqc';
-my $archive_qc_path = cwd . '/t/data/autoqc/tag_metrics';
+my $archive_qc_path = cwd . '/t/data/autoqc/upstream_tags';
 my $tag_sets_repository = cwd . '/t/data/autoqc/tag_sets';
 
-SKIP: { skip 'require bammaskflags', 6, unless `which bammaskflags`;
+use_ok ('npg_qc::autoqc::checks::upstream_tags');
 
-  use_ok ('npg_qc::autoqc::checks::upstream_tags');
-
-  my $EXIST_EXECUTABLES = `which icd`;
-
-  # ensure we're in the user's iRODs home
-  my $have_irods;
-  if ($EXIST_EXECUTABLES) {
-    `icd`;
-    $have_irods = system("imkdir test") == 0 ? 1 : 0;
-  }
+SKIP: { skip 'require bammaskflags', 7, unless `which bammaskflags`;
 
   my $dir = tempdir(CLEANUP => 1);
   `touch $dir/BamIndexDecoder.jar`;
-  local $ENV{CLASSPATH} = $dir; 
+  local $ENV{CLASSPATH} = $dir;
 
-  { 
-    my $r = npg_qc::autoqc::checks::upstream_tags->new(
-      repository => $ref_repos, id_run => 2, path => q[t], position => 1);
-    isa_ok ($r, 'npg_qc::autoqc::checks::upstream_tags');
-    lives_ok { $r->result; } 'No error creating result object';
-  }
+  my %h = (
+    position            => 1,
+    repository          => $ref_repos,
+    qc_in               => $archive_qc_path,
+    tag_sets_repository => $tag_sets_repository
+          );
 
-  SKIP: {
-      unless ($EXIST_EXECUTABLES) {
-        skip 'unable to access iRODS executables', 3;
-      }
-      elsif (!`which samtools_irods`) {
-        skip 'require samtools_irods', 3;
-      }
-      elsif (!$have_irods) {
-        skip 'unable to create iRODS test dir (try kinit to log in to iRODS)', 3;
-      }
+  my %ref = %h;
+  $ref{'id_run'} = 6954;
+  my $r = npg_qc::autoqc::checks::upstream_tags->new(\%ref);
+  isa_ok ($r, 'npg_qc::autoqc::checks::upstream_tags');
+  my $result;
+  lives_ok { $result = $r->result; } 'No error creating result object';
+  isa_ok ($result, 'npg_qc::autoqc::results::upstream_tags');  
+  my $expected = $ref_repos . '/tag_sets/sanger168.tags';
+  is($r->barcode_filename, $expected, 'correct barcode filename');
 
-      {
-        my $r = npg_qc::autoqc::checks::upstream_tags->new(
-          repository => $ref_repos, id_run => 6954,
-          qc_in      => $archive_qc_path,
-          tag_sets_repository => $tag_sets_repository, position => 1);
-        my $expected = $ref_repos . '/tag_sets/sanger168.tags';
-        is($r->barcode_filename, $expected, 'correct barcode filename');
-      }
+  %ref = %h;
+  $ref{'id_run'} = 13362;
+  $r = npg_qc::autoqc::checks::upstream_tags->new(\%ref);
+  $expected = $ref_repos . '/tag_sets/sanger168_6.tags';
+  is($r->barcode_filename, $expected, 'correct barcode filename');
 
-      {
-        my $r = npg_qc::autoqc::checks::upstream_tags->new(repository => $ref_repos, id_run => 13362,
-          qc_in => $archive_qc_path, tag_sets_repository => $tag_sets_repository, position => 1);
-        my $expected = $ref_repos . '/tag_sets/sanger168_6.tags';
-        is($r->barcode_filename, $expected, 'correct barcode filename');
-      }
+  %ref = %h;
+  $ref{'id_run'} = 12920;
+  $r = npg_qc::autoqc::checks::upstream_tags->new(\%ref);
+  $expected = $ref_repos . '/tag_sets/sanger168_7.tags';
+  is($r->barcode_filename, $expected, 'correct barcode filename');
+};
 
-      {
-        my $r = npg_qc::autoqc::checks::upstream_tags->new(repository => $ref_repos, id_run => 12920,
-          qc_in => $archive_qc_path, tag_sets_repository => $tag_sets_repository, position => 1);
-        my $expected = $ref_repos . '/tag_sets/sanger168_7.tags';
-        is($r->barcode_filename, $expected, 'correct barcode filename');
-      }
-  }
-  `irm -r test`;
-}
+1;
